# moonflare

./: .gitignore  .goreleaser.yml  .prototools  CLAUDE.md  Cargo.toml  Dockerfile.test  README.md  TESTING.md  justfile  llmc.toml  moon-astro.yml  moon-react.yml
.github/: CONTRIBUTING.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: check.yml  ci.yml  claude.yml  release.yml
.moon/: toolchain.yml  workspace.yml
moonflare-cli/: Cargo.toml  README.md
moonflare-cli/src/: errors.rs  main.rs  ui.rs
moonflare-cli/src/commands/: add.rs  build.rs  deploy.rs  dev.rs  init.rs  mod.rs
moonflare-cli/src/templates/: embedded.rs  engine.rs  mod.rs
moonflare-cli/src/utils/: cloudflare.rs  fs.rs  mod.rs  moon.rs
moonflare-cli/templates/: astro.template  crate.template  durable-object.template  react.template  workspace.template
moonflare-cli/tests/: deployment_smoke_tests.rs  init_command_tests.rs  init_dot_tests.rs  init_error_tests.rs  init_force_tests.rs  integration_tests.proptest-regressions  integration_tests.rs  property_tests.rs  typescript_tests.rs  wasm_integration_tests.rs  workspace_tests.rs
moonflare-cli/tests/common/: generators.rs  mod.rs  verification.rs  workspace.rs
scripts/: release.sh
shared-wasm/: moon.yml
src/: errors.rs  main.rs  ui.rs
templates/: react.template
tests/: init_command_tests.rs  init_dot_tests.rs  property_tests.proptest-regressions  property_tests.rs  rename_command_tests.rs  typescript_tests.rs  wasm_integration_tests.rs  workspace_tests.rs
(+31 files in other folders)
