[package]
name = "moonflare"
version = "0.1.0"
edition = "2024"
description = "A CLI utility for managing Cloudflare-focused monorepos with Moon"
license = "MIT"
authors = ["Moonflare Contributors"]
repository = "https://github.com/moonflare-dev/moonflare"

[[bin]]
name = "moonflare"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
which = "6.0"
tempfile = "3.10"
reqwest = { version = "0.12", features = ["json"] }
handlebars = "5.1"
walkdir = "2.4"
fs_extra = "1.3"
colored = "2.1"
indicatif = "0.17"
convert_case = "0.6"
miette = { version = "7.0", features = ["fancy"] }
thiserror = "1.0"

[dev-dependencies]
proptest = "1.4"
